fix parens being upshifted too high

--- a/mathquill.css
+++ b/mathquill.css
@@ -391,11 +391,11 @@
 
 .mathquill-rendered-math .paren {
   vertical-align: bottom;
-  -webkit-transform-origin: center 107%;
-  -moz-transform-origin: center 107%;
-  -ms-transform-origin: center 107%;
-  -o-transform-origin: center 107%;
-  transform-origin: center 107%;
+  -webkit-transform-origin: center 97%;
+  -moz-transform-origin: center 97%;
+  -ms-transform-origin: center 97%;
+  -o-transform-origin: center 97%;
+  transform-origin: center 97%;
 }
 
 .mathquill-rendered-math .array {
